<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Fragments.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_message"
                android:textAppearance="?attr/textAppearanceHeadline1"
                android:textColor="@color/text_primary_light" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appLogoImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/app_logo" />



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/loginCardView"
                style="@style/Widget.WeightTracker.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameLayout"
                        style="@style/Widget.WeightTracker.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textAppearance="?attr/textAppearanceBody1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        style="@style/Widget.WeightTracker.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password_hint"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textAppearance="?attr/textAppearanceBody1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            style="@style/Widget.WeightTracker.Button"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:enabled="false"
                            android:text="@string/login" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/createAccountButton"
                            style="@style/Widget.WeightTracker.Button"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/create_account" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>